# neutronSim

./: CMakeLists.txt  README.md  run.mac  setupEnv.sh  vis.mac
include/: ActionInitialization.hh  DetectorConstruction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  globals.hh  neutronGlobals.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  globals.cc  main.cc  neutronGlobals.cc
